--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
   <div id="container">
     <div id="card_container">
       <div id="text_align">
-        <a href="#"><img src="./images/image-equilibrium.jpg" alt="product" id="mask_1"></a>
+        <div id="mask_1">
+          <a href="#"><img src="./images/image-equilibrium.jpg" alt="product"></a>
+        </div>
         <h2>
           <a href="#">
             Equilibrium #3429
