--- a/index.html
+++ b/index.html
@@ -1,60 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NFT Card</title>
-  <link rel="shortcut icon" href="./images/favicon-32x32.png" type="image/x-icon">
-  <link rel="stylesheet" href="./style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NFT Card</title>
+    <link
+      rel="shortcut icon"
+      href="./images/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="./style.css" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
-  
-  <div id="container">
-    <div id="card_container">
-      <div id="text_align">
-        <div id="mask_1">
-          <a href="#"><img src="./images/image-equilibrium.jpg" alt="product"></a>
-        </div>
-        <h2>
-          <a href="#">
-            Equilibrium #3429
-          </a>
-        </h2>
-        <p>
-          Our Equilibrium collection promotes balance and calm.
-        </p>
-        <div id="details">
-          <span id="eth">
-            <img src="./images/icon-ethereum.svg" alt="">
-            0.041 ETH
-          </span>
-          <span id="timer">
-            <img src="./images/icon-clock.svg" alt="" id="clock">
-            3 days left
-          </span>
-        </div>
-        <div id="creator">
-          <img src="./images/image-avatar.png" alt="">
-          Creation of <span id="maker">
-            <a href="#">Jules Wyvern</a>
-          </span>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div id="container">
+      <div id="card_container">
+        <div id="text_align">
+          <div id="mask_1">
+            <a href="#"
+              ><img src="./images/image-equilibrium.jpg" alt="product"
+            /></a>
+          </div>
+          <h2>
+            <a href="#"> Equilibrium #3429 </a>
+          </h2>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+          <div id="details">
+            <span id="eth">
+              <img src="./images/icon-ethereum.svg" alt="" />
+              0.041 ETH
+            </span>
+            <span id="timer">
+              <img src="./images/icon-clock.svg" alt="" id="clock" />
+              3 days left
+            </span>
+          </div>
+          <div id="creator">
+            <img src="./images/image-avatar.png" alt="" />
+            Creation of
+            <span id="maker">
+              <a href="#">Jules Wyvern</a>
+            </span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
-
-
-
-
-
-  
-
-
-</body>
+  </body>
 </html>
